// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WordModel createOne 1`] = `
{
  "_id": Any<Object>,
  "additionalInfo": "additional info",
  "audioUrl": "mock.mp3",
  "createdAt": Any<String>,
  "defs": [
    {
      "def": "a person who believes that everyone is equal and should have the same rights and opportunities",
      "examples": [
        {
          "text": "He described himself as ‘an {it}egalitarian{/it}’.",
        },
      ],
    },
    {
      "def": "aiming for equal wealth, status, etc., for all people",
      "examples": [
        {
          "text": "He is a committed {it}egalitarian{/it}",
        },
        {
          "text": "Even in the {it}egalitarian{/it} Nordic country, Marin felt hergender and age sometimes received too much emphasis. Kostya Manenkov And Karl Ritter, USA TODAY, 21 Aug. 2022",
        },
      ],
    },
  ],
  "id": Any<String>,
  "imgUrl": "mock.jpeg",
  "isOffensive": false,
  "language": "ENGLISH",
  "level": "C1",
  "name": "egalitarian",
  "particle": "noun",
  "shortDef": [
    "aiming for equal wealth, status, etc., for all people",
  ],
  "stems": [
    "egalitarian",
    "egalitarianism",
    "egalitarians",
  ],
  "tags": [
    {
      "color": "pink",
      "text": "academic",
    },
  ],
  "transcription": "iˌɡælɪˈteəriən",
  "user": "6480560e8cad1841ed6b4011",
  "uuid": "74046e79-e4c9-4b52-ac96-cb7ae98fb601",
}
`;

exports[`WordModel findOne 1`] = `
{
  "_id": Any<Object>,
  "additionalInfo": "additional info",
  "audioUrl": "mock.mp3",
  "createdAt": Any<String>,
  "defs": [
    {
      "def": "a person who believes that everyone is equal and should have the same rights and opportunities",
      "examples": [
        {
          "text": "He described himself as ‘an {it}egalitarian{/it}’.",
        },
      ],
    },
    {
      "def": "aiming for equal wealth, status, etc., for all people",
      "examples": [
        {
          "text": "He is a committed {it}egalitarian{/it}",
        },
        {
          "text": "Even in the {it}egalitarian{/it} Nordic country, Marin felt hergender and age sometimes received too much emphasis. Kostya Manenkov And Karl Ritter, USA TODAY, 21 Aug. 2022",
        },
      ],
    },
  ],
  "id": Any<String>,
  "imgUrl": "mock.jpeg",
  "isOffensive": false,
  "language": "ENGLISH",
  "level": "C1",
  "name": "egalitarian",
  "particle": "noun",
  "shortDef": [
    "aiming for equal wealth, status, etc., for all people",
  ],
  "stems": [
    "egalitarian",
    "egalitarianism",
    "egalitarians",
  ],
  "tags": [
    {
      "color": "pink",
      "text": "academic",
    },
  ],
  "transcription": "iˌɡælɪˈteəriən",
  "user": "6480560e8cad1841ed6b4011",
  "uuid": "74046e79-e4c9-4b52-ac96-cb7ae98fb601",
}
`;

exports[`WordModel updateOne 1`] = `
{
  "_id": Any<Object>,
  "additionalInfo": "very useful information",
  "audioUrl": "mock.mp3",
  "createdAt": Any<String>,
  "defs": [
    {
      "def": "{bc} a strong substance that stretches and that is made out of chemicals or from the juice of a tropical tree",
      "examples": [
        {
          "text": "a rubber plantation",
        },
        {
          "text": "a rubber tree",
        },
      ],
    },
    {
      "def": "{b}{it}rubbers{/it}{/b} {it}US{/it}, {it}informal + old-fashioned{/it} {bc} shoes or boots that are made of rubber and that fit over your regular shoes to keep them dry",
      "examples": [],
    },
  ],
  "id": Any<String>,
  "imgUrl": "mock.jpeg",
  "isOffensive": false,
  "language": "ENGLISH",
  "level": "B2",
  "name": "egalitarian",
  "particle": "noun",
  "shortDef": [
    "aiming for equal wealth, status, etc., for all people",
  ],
  "stems": [
    "egalitarian",
    "egalitarianism",
    "egalitarians",
  ],
  "tags": [
    {
      "color": "pink",
      "text": "academic",
    },
  ],
  "transcription": "iˌɡælɪˈteəriən",
  "user": "6480560e8cad1841ed6b4011",
  "uuid": "74046e79-e4c9-4b52-ac96-cb7ae98fb601",
}
`;
